# envtools

./: .dockerignore  CMakeLists.txt  Color  Cubemap  Cubemap.cpp  Dockerfile  ExtractLightsMerge  ExtractLightsVariance  ExtractLightsVariance.cpp  ExtractLightsVarianceDebug  LICENSE.md  Light  Makefile  Math  README.md  SummedAreaTable  SummedAreaTable.cpp  SummedAreaTableRegion  SummedAreaTableRegion.cpp  build_ibl_specular.sh  build_mipmap.sh  build_multires.sh  compile.sh  cubemapPacker.cpp  envBRDF.cpp  envBackground.cpp  envIrradiance.cpp  envPrefilter.cpp  envremap.c  envremap.cpp  envtoirr.c  envtoirr.cpp  envtospecular.cpp  extractLight.cpp  extractLightsMerge.cpp  extractLightsTest.py  extractLightsTest.sh  extractLightsVariance.cpp  extractLightsVarianceDebug.cpp  fixEdge.cpp  (+12 more)
etc/: dome.tif  earth.tif  hemi.tif  moon.tif  sampling.ai
opencl/: ggx.cl  test.py
testData/: config.json  graceCath.json  outTest.json  specular_4.tif
